--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,33 @@
 
    <p class="signup-link">
      No account?
-     <a href="">Sign up</a>
+     <a href="#Register">Sign up</a>
    </p>
 </form>
 </div>
+
+
+<div id="Register" class="reg-hidden">
+    <form class="form" id="register">
+        <p class="form-title">create your account</p>
+         <div class="input-container">
+           <input id="email" type="email" placeholder="Enter email">
+           <span>
+           </span>
+       </div>
+       <div class="input-container">
+           <input id="password" type="password" placeholder="Enter password">
+         </div>
+          <button type="submit" class="submit">
+         Sign in
+       </button>
+    
+       <p class="signup-link">
+         No account?
+         <a href="">Sign up</a>
+       </p>
+    </form>
+    </div>
 
 
 <script src="/src/scripts/index.js"></script>
